--- a/content/post/初识高丽·不负盛名.md
+++ b/content/post/初识高丽·不负盛名.md
@@ -66,7 +66,9 @@ url: "初识高丽·不负盛名.html"
 
 到了保健所，行李箱被指引先放在一辆私家车后箱。虽然一脸懵逼，但隐隐感觉，他是要送我回酒店的意思。
 
-核酸检测跟广州有点不一样是，广州捅喉咙，以为这里也是，没反应过来就已经被捅完了鼻子。 ![IMG_20211025_153440.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20211025_153440.jpg?imageView/2/w/800)
+核酸检测跟广州有点不一样是，广州捅喉咙，以为这里也是，没反应过来就已经被捅完了鼻子。 
+
+![IMG_20211025_153440.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20211025_153440.jpg?imageView/2/w/800)
 
 ![IMG_20211025_153655.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20211025_153655.jpg?imageView/2/w/800)
 
