更新韩国记录

--- a/content/post/下一站·薄荷岛.md
+++ b/content/post/下一站·薄荷岛.md
@@ -1,9 +1,8 @@
 ---
 title: 下一站·薄荷岛
-tags: []
+tags: [Philippines]
 id: '710'
-categories:
-  - - 旅途往事
+categories: ["旅途往事"]
 date: 2019-10-01 18:10:00
 url: "下一站·薄荷岛.html"
 ---
