--- a/content/post/中国之光·景德陶瓷.md
+++ b/content/post/中国之光·景德陶瓷.md
@@ -1,8 +1,7 @@
 ---
 title: 中国之光·景德陶瓷
-tags: []
-categories:
-  - - 旅途往事
+tags: [China]
+categories: ["旅途往事"]
 date: 2017-04-30 08:01:00
 url: "中国之光·景德陶瓷.html"
 ---
