--- a/content/post/为填旧憾·远赴他乡.md
+++ b/content/post/为填旧憾·远赴他乡.md
@@ -1,9 +1,8 @@
 ---
 title: 为填旧憾·远赴他乡
-tags: []
+tags: [Philippines]
 hiddenFromHomePage: ture
-categories:
-  - - Diary
+categories: ["感想回忆"]
 date: 2022-12-18 00:24:50
 url: "为填旧憾·远赴他乡.html"
 ---
