--- a/content/post/人文江西·静美庐山.md
+++ b/content/post/人文江西·静美庐山.md
@@ -1,9 +1,8 @@
 ---
 title: 人文江西·静美庐山
-tags: []
+tags: [China]
 id: '859'
-categories:
-  - - 旅途往事
+categories: ["旅途往事"]
 date: 2017-04-29 08:01:00
 url: "人文江西·静美庐山.html"
 ---
