--- a/content/post/多年以后·再度回想.md
+++ b/content/post/多年以后·再度回想.md
@@ -1,13 +1,13 @@
 ---
 hiddenFromHomePage: ture
 title: 多年以后·再度回想
-tags: []
-categories:
-  - - Diary
+tags: [Diary]
+categories: ["感想回忆"]
 date: 2023-02-09 01:35:57
 url: "多年以后·再度回想.html"
 ---
 
+## 共鸣
 或许多年以后，我并不知当初为何做出如此决定。直到今晚我听到姜育恒的“多年以后”，才感受到共鸣。
 
 人，总是会老去。不同的是，当别人忌讳死亡的时候，我却把人生倒着走。
@@ -17,6 +17,8 @@ url: "多年以后·再度回想.html"
 除了考试，我最害怕的就是死亡。
 
 不是因为害怕死亡本身，而是还有许多心愿尚未了却。
+
+## 未了之愿
 
 我爱的人，还没来得及说爱她；我的愿望，还有许多尚未实现；我的理想，还有很远的距离。
 
@@ -36,6 +38,8 @@ url: "多年以后·再度回想.html"
 
 即便时过境迁，凡能回忆，此生无憾。
 
+## 路在何方
+
 前程，敢问路在何方。
 
 内心的孤寂，唯有夜深人静的时候，欣然升起。
@@ -47,6 +51,8 @@ url: "多年以后·再度回想.html"
 故人不散，如今已是一个可证的伪命题。
 
 见过太多的人，经历太多的事，方知最珍贵的唯有身边的伴侣和远方的兄妹父母。
+
+## 她
 
 首尔的天空会飘雪，而碧瑶永远是春天。故乡的夏，和清迈的炎热也竟如此相似。
 
