--- a/content/post/天门中断·常忆一二.md
+++ b/content/post/天门中断·常忆一二.md
@@ -1,8 +1,7 @@
 ---
 title: 天门中断·常忆一二
-tags: []
-categories:
-  - - 旅途往事
+tags: [China]
+categories: ["旅途往事"]
 date: 2017-05-31 08:01:00
 url: "天门中断·常忆一二.html"
 ---
