--- a/content/post/岳麓山水·潇湘凰情.md
+++ b/content/post/岳麓山水·潇湘凰情.md
@@ -1,9 +1,8 @@
 ---
 title: 岳麓山水·潇湘凰情
-tags: []
+tags: [China]
 id: '957'
-categories:
-  - - 旅途往事
+categories: ["旅途往事"]
 date: 2017-06-02 08:02:00
 url: "岳麓山水·潇湘凰情.html"
 ---
