--- a/content/post/心中九寨·五彩斑斓.md
+++ b/content/post/心中九寨·五彩斑斓.md
@@ -1,8 +1,7 @@
 ---
 title: 心中九寨·五彩斑斓
-tags: []
-categories:
-  - - 旅途往事
+tags: [China]
+categories: ["旅途往事"]
 date: 2021-09-20 09:29:00
 url: "心中九寨·五彩斑斓.html"
 ---
