--- a/content/post/昨日绵阳·偶遇广元.md
+++ b/content/post/昨日绵阳·偶遇广元.md
@@ -1,8 +1,7 @@
 ---
 title: 昨日绵阳·偶遇广元
-tags: []
-categories:
-  - - 旅途往事
+tags: [China]
+categories: ["旅途往事"]
 date: 2021-09-18 11:04:00
 url: "昨日绵阳·偶遇广元.html"
 ---
