--- a/content/post/暹罗风情·琴瑟友之.md
+++ b/content/post/暹罗风情·琴瑟友之.md
@@ -1,8 +1,7 @@
 ---
 title: 暹罗风情·琴瑟友之
-tags: []
-categories:
-  - - 旅途往事
+tags: [Thailand]
+categories: ["旅途往事"]
 date: 2018-10-06 08:02:00
 url: "暹罗风情·琴瑟友之.html"
 ---
