--- a/content/post/枯木逢春·人无少年.md
+++ b/content/post/枯木逢春·人无少年.md
@@ -1,9 +1,8 @@
 ---
 title: 枯木逢春·人无少年
-tags: []
+tags: [China]
 id: '767'
-categories:
-  - - 旅途往事
+categories: ["旅途往事"]
 date: 2020-10-01 08:00:00
 url: "枯木逢春·人无少年.html"
 ---
