--- a/content/post/梦的远方·祭奠青春.md
+++ b/content/post/梦的远方·祭奠青春.md
@@ -1,9 +1,8 @@
 ---
 title: 梦的远方·祭奠青春
-tags: []
+tags: [China]
 id: '745'
-categories:
-  - - 旅途往事
+categories: ["旅途往事"]
 date: 2020-09-25 08:02:00
 url: "梦的远方·祭奠青春.html"
 ---
