--- a/content/post/流落在满洲里街头.md
+++ b/content/post/流落在满洲里街头.md
@@ -1,8 +1,7 @@
 ---
 title: 流落在满洲里街头
-tags: []
-categories:
-  - - 旅途往事
+tags: [China]
+categories: ["旅途往事"]
 date: 2020-06-25 19:01:00
 url: "流落在满洲里街头.html"
 ---
