--- a/content/post/田园牧歌·烟雨婺源.md
+++ b/content/post/田园牧歌·烟雨婺源.md
@@ -1,8 +1,7 @@
 ---
 title: 田园牧歌·烟雨婺源
-tags: []
-categories:
-  - - 旅途往事
+tags: [China]
+categories: ["旅途往事"]
 date: 2017-05-03 08:01:00
 url: "田园牧歌·烟雨婺源.html"
 ---
