--- a/content/post/电白民俗·进宅之喜.md
+++ b/content/post/电白民俗·进宅之喜.md
@@ -1,8 +1,7 @@
 ---
 title: 电白民俗·进宅之喜
-tags: []
-categories:
-  - - 旅途往事
+tags: [Dianbai]
+categories: ["生活琐事"]
 date: 2019-12-13 07:59:00
 url: "电白民俗·进宅之喜.html"
 
