--- a/content/post/电白风情·农场杂记.md
+++ b/content/post/电白风情·农场杂记.md
@@ -1,8 +1,7 @@
 ---
 title: 电白风情·农场杂记
-tags: []
-categories:
-  - - 生活和你
+tags: [Dianbai]
+categories: ["生活琐事"]
 date: 2021-05-07 21:54:00
 url: "电白风情·农场杂记.html"
 ---
