--- a/content/post/至美柬埔·千年吴哥.md
+++ b/content/post/至美柬埔·千年吴哥.md
@@ -1,9 +1,8 @@
 ---
 title: 至美柬埔·千年吴哥
-tags: []
+tags: [Cambodia]
 id: '663'
-categories:
-  - - 旅途往事
+categories: ["旅途往事"]
 date: 2019-06-11 07:11:00
 url: "至美柬埔·千年吴哥.html"
 ---
