--- a/content/post/菲国风情·美景美食.md
+++ b/content/post/菲国风情·美景美食.md
@@ -1,9 +1,8 @@
 ---
 title: 菲国风情·美景美食
-tags: []
+tags: [Philippines]
 id: '593'
-categories:
-  - - 旅途往事
+categories: ["旅途往事"]
 date: 2020-01-01 13:11:00
 url: "菲国风情·美景美食.html"
 ---
