--- a/content/post/雾起黄山·朝遇佛光.md
+++ b/content/post/雾起黄山·朝遇佛光.md
@@ -1,8 +1,7 @@
 ---
 title: 雾起黄山·朝遇佛光
-tags: []
-categories:
-  - - 旅途往事
+tags: [China]
+categories: ["旅途往事"]
 date: 2017-05-06 08:01:00
 url: "雾起黄山·朝遇佛光.html"
 ---
