--- a/content/post/忆往昔情·富贵相忘.md
+++ b/content/post/忆往昔情·富贵相忘.md
@@ -1,8 +1,7 @@
 ---
 title: 忆往昔情·富贵相忘
-tags: []
-categories:
-  - - 旅途往事
+tags: [China]
+categories: ["旅途往事"]
 date: 2019-12-01 07:59:00
 url: "忆往昔情·富贵相忘.html"
 ---
