--- a/content/post/植物王国·细雨蒙蒙.md
+++ b/content/post/植物王国·细雨蒙蒙.md
@@ -1,8 +1,7 @@
 ---
 title: 植物王国·细雨蒙蒙
-tags: []
-categories:
-  - - 旅途往事
+tags: [China]
+categories: ["旅途往事"]
 date: 2020-10-02 08:00:00
 url: "植物王国·细雨蒙蒙.html"
 ---
