--- a/content/post/疫情之下·皆不是人​.md
+++ b/content/post/疫情之下·皆不是人​.md
@@ -1,8 +1,7 @@
 ---
 title: 疫情之下·皆不是人​
-tags: []
-toc: ture
-categories: ["闲聊瞎扯"]
+tags: [Emotion]
+categories: []
 date: 2022-11-27 18:35:00
 hiddenFromHomePage: ture
 url: "疫情之下·皆不是人.html"
