--- a/content/post/下一站·薄荷岛.md
+++ b/content/post/下一站·薄荷岛.md
@@ -7,8 +7,6 @@ date: 2019-10-01 18:10:00
 url: "下一站·薄荷岛.html"
 ---
 
-* * *
-
 ## 途径马尼拉
 
 首站途径马尼拉，马车游市区，一时没把汇率转过来，听了50块，以为是人民币，上了车。等到下车时才想起三百五，甚是后悔。于是以当地的人均收入折算，附加个人失误，给了1500P（折算人民币约210）。
@@ -65,27 +63,34 @@ url: "下一站·薄荷岛.html"
 
 ![IMG_20191001_150325.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20191001_150325.jpg?imageView/2/w/800)
 
-色彩缤纷的花花草草 萌生爱意 ![IMG_20191001_153142.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20191001_153142.jpg?imageView/2/w/800)
+色彩缤纷的花花草草 萌生爱意 !
+[IMG_20191001_153142.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20191001_153142.jpg?imageView/2/w/800)
 
 ![IMG_20191001_153739.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20191001_153739.jpg?imageView/2/w/800)
 
-茂密的植被 不愧是热带雨林 ![IMG_20191001_153810.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20191001_153810.jpg?imageView/2/w/800)
+茂密的植被 不愧是热带雨林
+ ![IMG_20191001_153810.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20191001_153810.jpg?imageView/2/w/800)
 
-几乎没有镌刻的自然生态 ![IMG_20191001_154416.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20191001_154416.jpg?imageView/2/w/800)
+几乎没有镌刻的自然生态 
+![IMG_20191001_154416.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20191001_154416.jpg?imageView/2/w/800)
 
-笔直的道路源于地广人稀 ![IMG_20191001_164601.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20191001_164601.jpg?imageView/2/w/800)
+笔直的道路源于地广人稀
+ ![IMG_20191001_164601.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20191001_164601.jpg?imageView/2/w/800)
 
-历经六十公里，来到我心心念念的巧克力山Chocolate Hills夜幕已落下，回程还有同样的距离。此生骑摩托距离最长的一天！ ![IMG_20191001_171616.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20191001_171616.jpg?imageView/2/w/800)
+历经六十公里，来到我心心念念的巧克力山Chocolate Hills夜幕已落下，回程还有同样的距离。此生骑摩托距离最长的一天！
+![IMG_20191001_171616.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20191001_171616.jpg?imageView/2/w/800)
 
 ![IMG_20191001_171341.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20191001_171341.jpg?imageView/2/w/800)
 
 ## 麦哲伦失足之地
 
-路过宿务的一个博物馆，感谢这位义工小姐姐，给我介绍的菲律宾历史。让我想不到的是，我的蹩脚英语居然能听得懂。 ![IMG_20191002_145843.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20191002_145843.jpg?imageView/2/w/800)
+路过宿务的一个博物馆，感谢这位义工小姐姐，给我介绍的菲律宾历史。让我想不到的是，我的蹩脚英语居然能听得懂。 
+![IMG_20191002_145843.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20191002_145843.jpg?imageView/2/w/800)
 
 了解历史之后才知道当年麦哲伦也曾途径宿务岛，与他不同的是，他被打死在这里了，而我，还要去天使城快活。
 
-次日来到麦哲伦十字架和圣婴大教堂，自拍一张证明我来过！ ![IMG_20191003_102228.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20191003_102228.jpg?imageView/2/w/800)
+次日来到麦哲伦十字架和圣婴大教堂，自拍一张证明我来过！ 
+![IMG_20191003_102228.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20191003_102228.jpg?imageView/2/w/800)
 
 ![IMG_20191003_112410.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20191003_112410.jpg?imageView/2/w/800)
 
@@ -93,7 +98,8 @@ url: "下一站·薄荷岛.html"
 
 ![IMG_20191003_113318.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20191003_113318.jpg?imageView/2/w/800)
 
-顺便买几件纪念品 ![IMG_20191003_110704.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20191003_110704.jpg?imageView/2/w/800)
+顺便买几件纪念品 
+![IMG_20191003_110704.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20191003_110704.jpg?imageView/2/w/800)
 
 ![IMG_20191003_110442.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20191003_110442.jpg?imageView/2/w/800)
 
@@ -115,6 +121,7 @@ url: "下一站·薄荷岛.html"
 
 ![IMG_20191005_113546.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20191005_113546.jpg?imageView/2/w/400)
 
-一人六个菜，消费约一百七人民币！ ![IMG_20191005_124229.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20191005_124229.jpg?imageView/2/w/800)
+一人六个菜，消费约一百七人民币！ 
+![IMG_20191005_124229.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20191005_124229.jpg?imageView/2/w/800)
 
 > 其实，我说我来找吃的，你也不会相信的啦！
