--- a/content/post/化成天下一.md
+++ b/content/post/化成天下一.md
@@ -1,7 +1,7 @@
 ---
 title: 化成天下一
 toc: false
-tags: ["lecture"]
+tags: ["Lecture"]
 categories: ["讲座清单"]
 date: "2017-12-18T21:55:00+08:00"
 url: "archives/187"
