--- a/content/post/高丽东海·韩剧景色.md
+++ b/content/post/高丽东海·韩剧景色.md
@@ -9,27 +9,27 @@ url: "高丽东海·韩剧景色.html"
 
 时值新春，约上几个小伙伴到东海岸玩两天。蓝色的海，干净自然，跟中国的截然不同。
 
-![海景.jpg](https://blog.dahouzi.cn/blog/picture/IMG_0739.png?imageView/2/w/800)
+![海景.jpg](http://blog.dahouzi.cn/blog/picture/IMG_0739.png?imageView/2/w/800)
 
-![水草.jpg](https://blog.dahouzi.cn/blog/picture/IMG_0711.png?imageView/2/w/800)
+![水草.jpg](http://blog.dahouzi.cn/blog/picture/IMG_0711.png?imageView/2/w/800)
 
-![平昌奥运会.jpg](https://blog.dahouzi.cn/blog/picture/IMG_0704.png?imageView/2/w/800)
+![平昌奥运会.jpg](http://blog.dahouzi.cn/blog/picture/IMG_0704.png?imageView/2/w/800)
 
 ## 韩剧景色
 
 正东津，韩剧《鬼怪》的拍摄地，可惜不看韩剧，浑然不知是啥。
 
-![鬼怪.jpg](https://blog.dahouzi.cn/blog/picture/IMG_0743.png?imageView/2/w/800)
+![鬼怪.jpg](http://blog.dahouzi.cn/blog/picture/IMG_0743.png?imageView/2/w/800)
 
-![黄昏.jpg](https://blog.dahouzi.cn/blog/picture/IMG_0676.png?imageView/2/w/800)
+![黄昏.jpg](http://blog.dahouzi.cn/blog/picture/IMG_0676.png?imageView/2/w/800)
 
 ## 独爱海鲜
 
 唯有美食，能填报广东人的胃。
 
-![人头海鲜.jpg](https://blog.dahouzi.cn/blog/picture/IMG_0677.png?imageView/2/w/800)
+![人头海鲜.jpg](http://blog.dahouzi.cn/blog/picture/IMG_0677.png?imageView/2/w/800)
 
-![贝.jpg](https://blog.dahouzi.cn/blog/picture/IMG_0680.png?imageView/2/w/800)
+![贝.jpg](http://blog.dahouzi.cn/blog/picture/IMG_0680.png?imageView/2/w/800)
 
-![虾.jpg](https://blog.dahouzi.cn/blog/picture/IMG_0681.png?imageView/2/w/800)
+![虾.jpg](http://blog.dahouzi.cn/blog/picture/IMG_0681.png?imageView/2/w/800)
 
