更新职业规划

--- a/content/post/梦的远方·祭奠青春.md
+++ b/content/post/梦的远方·祭奠青春.md
@@ -45,14 +45,19 @@ url: "梦的远方·祭奠青春.html"
 
 ![IMG_20200927_152420.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20200927_152420.jpg?imageView/2/w/800)
 
-寂静的古城 野火之后 历史也变得缥缈 ![IMG_20200927_175500.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20200927_175500.jpg?imageView/2/w/800)
+寂静的古城 野火之后 历史也变得缥缈 
+![IMG_20200927_175500.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20200927_175500.jpg?imageView/2/w/800)
 
-国旗飘荡的天空 迎接祖国下一个华诞 ![IMG_20200927_175655.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20200927_175655.jpg?imageView/2/w/800)
+国旗飘荡的天空 迎接祖国下一个华诞 
+![IMG_20200927_175655.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20200927_175655.jpg?imageView/2/w/800)
 
-花儿也结成了对 而我...... ![IMG_20200927_181113.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20200927_181113.jpg?imageView/2/w/800)
+花儿也结成了对 而我...... 
+![IMG_20200927_181113.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20200927_181113.jpg?imageView/2/w/800)
 
 ![IMG_20200927_180915.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20200927_180915.jpg?imageView/2/w/800)
 
-等你的风花雪月 ![IMG_20200927_213016.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20200927_213016.jpg?imageView/2/w/800)
+等你的风花雪月
+![IMG_20200927_213016.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20200927_213016.jpg?imageView/2/w/800)
 
-藏式火锅 祭奠青春不再来 ![IMG_20200927_184322.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20200927_184322.jpg?imageView/2/w/800)
+藏式火锅 祭奠青春不再来 
+![IMG_20200927_184322.jpg](http://blog.dahouzi.cn/blog/picture/IMG_20200927_184322.jpg?imageView/2/w/800)
